--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -1,7 +1,7 @@
 ---
 title: "W_UP_01"
-author: "your name here"
-date: "fall 2020"
+author: "Keren Gonzalez"
+date: "Fall 2021"
 output: html_document
 ---
 
@@ -41,16 +41,38 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+
+```{r}
+boxplot(pushups~position,data=mydata)
+```
+
+According to the data, we see that the skill position players perform more pushups on average versus the line position players in 2 minutes.  
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+favstats(pushups~position,data=mydata)
+```
+  
+On average, the line players can do about 17 push ups in two minutes. But for the skill   players, they can do about 50 pushups in two minutes.  
+  
 ## Inferential Results
 
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+  
+```{r}
+t.test(pushups~position,data=mydata)
+```
+
+We found that the if the null hypothesis was true, the probability of getting the result we found is 0.00000942. This is such a small number that we cannot justify the null hypothesis and must reject it; we reject $H_0$.
 
 # Discussion and Conclusion
 
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
+In summary, we wanted to find out if there was a difference in the average number of pushups that the line players and skill players are able to do in 2 minutes.
+
+The p-value indicated that we reject the null hypothesis. We conclude that the Georgetown football line players on average do less pushups than the skill players in two minutes.
